# RAMPART

./: .gitignore  .project  AUTHORS  CITATION  LICENSE  Makefile.am  README  README.md  build.sh  clean_job.pl  clipper.pl  dedup.pl  degap.pl  improver.pl  index.html  mass.pl  mass_formatter.pl  mass_gatherer.pl  mass_gp.pl  mass_plotter.pl  mass_selector.pl  params.json  pom.xml  qt.pl  rampart.cfg  rampart.pl  report_generator.pl  scaffolder.pl  validator.pl
data/: example.cfg  weightings.tab
doc/: Makefile
doc/source/: amp.rst  (+19 more)
etc/: conan.properties  example_process_loading.cfg
java/: .gitignore  .project  pom.xml  test.out
modules/: AppStarter.pm  Configuration.pm  PbsJobSubmitter.pm  QsOptions.pm  RampartJobFileStructure.pm  SubmitJob.pm
perl/: get_best.pl  improver.pl  validator.pl
r_scripts/: mass_plotter.R  mass_selector.R
scripts/: .gitignore  Configuration.pm  JobSubmitter.pm  LsfJobSubmitter.pm  LsfJobSubmitter.t  PbsJobSubmitter.pm  QsOptions.pm  QsOptions.t  QsTool.pm  QsTool.t  SubmitJob.pm  assembler.pl  assembly_analyser.pl  assembly_improver.pl  assembly_stats_decider.R  assembly_stats_formatter.pl  assembly_stats_gatherer.pl  assembly_stats_plotter.R  assembly_stats_plotter.pl  clipper.pl  degap.pl  full_plotter.R  gap_closer.pl  get_best.pl  improver.pl  mass.pl  mass_formatter.pl  mass_gatherer.pl  mass_gp.pl  mass_plotter.R  mass_plotter.pl  mass_selector.R  mass_selector.pl  plot_assembly_stats.R  qt.pl  rampart.pl  scaffolder.pl  select_best_assembly.R
tests/: Configuration.t  LsfJobSubmitter.t  QsOptions.t
tools/: sequence_info
(+1345 files in other folders)
